--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
   },
   "homepage": "https://github.com/Nat-crit20/movie-api#readme",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.441.0",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.2",
     "express-validator": "^6.15.0",
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
